--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,19 +2,24 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: total-site
-  namespace: dev # В пайплайне подставится dev/prod
+  namespace: dev
+  labels:
+    app: total-site
+    environment: dev
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: total-site
+      environment: dev
   template:
     metadata:
       labels:
         app: total-site
+        environment: dev
     spec:
       containers:
         - name: total-site
-          image: localhost:5000/total-site:dev # В пайплайне подставится dev/prod
+          image: localhost:5000/total-site:dev
           ports:
             - containerPort: 80
