--- a/service.yaml
+++ b/service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: total-site
-  namespace: dev # В пайплайне подставится dev/prod
+  namespace: dev
 spec:
   type: ClusterIP
   selector:
     app: total-site
+    environment: dev
   ports:
     - protocol: TCP
       port: 80
